--- a/calender.css
+++ b/calender.css
@@ -177,6 +177,7 @@ div.calender{
 iframe{
     filter: invert(.9) saturate(0.5) hue-rotate(145deg);
     width: 100%;
+	height: 500px;
  }
 
  @media only screen and (max-width: 768px){
